--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,8 +1,8 @@
 /*Signin and Registration ID*/
 
 #error {
-  visibility: hidden;
-  min-width: 250px;
+    visibility: hidden;
+    min-width: 250px;
     margin-left: -125px;
     background-color: #0e1735;
     color: white;
@@ -19,31 +19,54 @@
 }
 
 #error.show {
-  visibility: visible;
-  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
 @-webkit-keyframes fadein {
-  from {bottom: 0; opacity: 0;} 
-  to {bottom: 66vh; opacity: 1;}
+    from {
+        bottom: 0;
+        opacity: 0;
+    }
+    to {
+        bottom: 66vh;
+        opacity: 1;
+    }
 }
 
 @keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 66vh; opacity: 1;}
+    from {
+        bottom: 0;
+        opacity: 0;
+    }
+    to {
+        bottom: 66vh;
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes fadeout {
-  from {bottom: 66vh; opacity: 1;} 
-  to {bottom: 0; opacity: 0;}
+    from {
+        bottom: 66vh;
+        opacity: 1;
+    }
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
 }
 
 @keyframes fadeout {
-  from {bottom: 66vh; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
+    from {
+        bottom: 66vh;
+        opacity: 1;
+    }
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
 }
-
 
 #signin_id {
     padding: 100px 0 60px 0;
@@ -88,17 +111,16 @@
 }
 
 @media only screen and (max-width: 600px) {
-#signin_id .nav-tabs a {
-    border: none;
-    border-radius: 50px;
-    font-weight: 600;
-    background-color: #0e1b4d;
-    color: #fff;
-    padding: 10px 40px;
-    margin-right: -18px;
+    #signin_id .nav-tabs a {
+        border: none;
+        border-radius: 50px;
+        font-weight: 600;
+        background-color: #0e1b4d;
+        color: #fff;
+        padding: 10px 40px;
+        margin-right: -18px;
+    }
 }
-}
-
 
 #signin_id .nav-tabs a.active {
     background-color: #f82249;
@@ -126,7 +148,6 @@
     border-radius: 0.5em;
 }
 
-
 #login_inno .about-btn {
     font-family: "Raleway", sans-serif;
     font-weight: 500;
@@ -150,7 +171,6 @@
     color: #fff;
 }
 
-
 #registration_inno .about-btn {
     font-family: "Raleway", sans-serif;
     font-weight: 500;
@@ -172,11 +192,6 @@
 #registration_inno .about-btn:hover {
     background: #f82249;
     color: #fff;
-}
-
-.form-group #forgot_password {
-	display: none;
-    border: 0;
 }
 
 .form-group #login_button {
