--- a/views/login.html
+++ b/views/login.html
@@ -46,8 +46,7 @@
 
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use a text logo -->
-                <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="inno logo"
-                        title="Innovision'19"></a>
+                <a href="../index.html" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="inno logo" title="Innovision'19"></a>
                 <h1><a href="#"><span>innovision'19</span></a></h1>
             </div>
 
@@ -66,9 +65,9 @@
                             <a href="eventsSection.html#workshops2">Workshops (Paid)</a>
                             <a href="eventsSection.html#exhibitions1">Exhibitions</a>
                             <a href="eventsSection.html#cultural1">Pro Shows</a>
-                        	<a href="eventsSection.html#funevents1">Fun Events</a>
-                        	<a href="eventsSection.html#preinnoevents1">Pre-inno Events</a>
-                        	<a href="eventsSection.html#special1">Special Events</a>
+                            <a href="eventsSection.html#funevents1">Fun Events</a>
+                            <a href="eventsSection.html#preinnoevents1">Pre-inno Events</a>
+                            <a href="eventsSection.html#special1">Special Events</a>
                         </div>
 
                     </li>
@@ -85,7 +84,7 @@
         </div>
     </header>
     <!-- #header -->
-    
+
     <!--==========================
     Login and Registration Section
   ============================-->
@@ -136,8 +135,8 @@
 
                             </div>
                         </div>
-                    	
-                    	<br>
+
+                        <br>
                         <div class="form-group" style="color:white" id="ca_apply">
                             <label class="control-label col-sm-8" for="" style="color:white">Do you want to register through CA?</label>
                             <form>
@@ -155,7 +154,7 @@
                                 <input type="text" class="form-control" id="enter_ca" placeholder="Enter CA Id" name="enter_ca">
                             </div>
                         </div>
-                    
+
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="college" style="color:white">College:</label>
                             <div>
@@ -252,7 +251,7 @@
 
                             <!--<a href="#about" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</a> <br>-->
                             <button id="login_button" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</button>
-                            <button id="forgot_password" data-toggle="modal" data-target="#forgotPasswordModal" class="about-btn scrollto">&nbsp;&nbsp; FORGOT PASSWORD&nbsp;&nbsp;</button>
+                            <button id="forgot_password" data-toggle="modal" data-target="#forgotPasswordModal">&nbsp;&nbsp; FORGOT PASSWORD&nbsp;&nbsp;</button>
                         </div>
 
                     </div>
@@ -303,12 +302,9 @@
 
                     <div class="col-lg-3 col-md-6 footer-info">
                         <img src="../assets/images/inno_logo.png" alt="Inno logo">
-                        <p>Innovision is the annual techno-management festival of NIT Rourkela organized by the
-                            students. It has
-                            been fuelling innovations and encouraging millions since 2004 and is a unique forum where
-                            the youth gets
-                            the opportunity to explore and experience science and technology in all its myriad forms.
-                            .</p>
+                        <p>Innovision is the annual techno-management festival of NIT Rourkela organized by the students. It has been fuelling innovations and encouraging millions since 2004 and is a unique forum where the youth gets the opportunity to explore
+                            and experience science and technology in all its myriad forms. .
+                        </p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-links">
@@ -363,17 +359,9 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 footer-info">
-                        <a href="https://www.nitrkl.ac.in" target="_blank"> <img src="../assets/images/nitrlogo.png"
-                                alt="NITR Logo"> </a>
-                        <p>NIT Rourkela (formerly REC Rourkela) is an institute of national importance, with UG, PG, and
-                            research
-                            programs in engineering and science. It is a publicly funded institute of higher learning
-                            for engineering
-                            and technology located in the steel city of Rourkela, Odisha, India. It is one of the 30
-                            National
-                            Institutes of Technology in India and has been recognized as an Institute of National
-                            Importance by the
-                            National Institutes of Technology Act, 2007.
+                        <a href="https://www.nitrkl.ac.in" target="_blank"> <img src="../assets/images/nitrlogo.png" alt="NITR Logo"> </a>
+                        <p>NIT Rourkela (formerly REC Rourkela) is an institute of national importance, with UG, PG, and research programs in engineering and science. It is a publicly funded institute of higher learning for engineering and technology located
+                            in the steel city of Rourkela, Odisha, India. It is one of the 30 National Institutes of Technology in India and has been recognized as an Institute of National Importance by the National Institutes of Technology Act, 2007.
                         </p>
                     </div>
 
@@ -386,12 +374,7 @@
                 &copy; Copyright <strong>National Institute of Technology, Rourkela</strong>.
             </div>
             <div class="credits">
-                <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
-        -->
+
                 Designed by <a href="#">Innovision Tech Team</a>
             </div>
         </div>
@@ -418,32 +401,30 @@
 
     <!-- Template Main Javascript File -->
     <script src="../assets/js/main.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-<!--     <script src="../assets/js/sweetalert.js"></script> -->
+    <script src="../assets//lib/jquery/jquery.min.js"></script>
+    <!--     <script src="../assets/js/sweetalert.js"></script> -->
     <script src="../assets/lib/sweetalert/sweetalert.js"></script>
 
     <script src="../assets/js/ajax/login_registration.js">
     </script>
     <script>
-      var q = localStorage.getItem("token");
-      if(q)
-      {
+        var q = localStorage.getItem("token");
+        if (q) {
             $.ajax({
-                url:'../apis/user/auth/profile.php',
-                beforeSend: function(request){
+                url: '../apis/user/auth/profile.php',
+                beforeSend: function(request) {
                     request.setRequestHeader('Authorization', 'Bearer ' + q);
                 },
                 type: 'get',
-                    success:function(response)
-                    {
-                   response = JSON.parse(response);
+                success: function(response) {
+                    response = JSON.parse(response);
                     if (response.status == "success") {
-                   // $("#log_btn").hide();
-                   $('.log_btn').html('Profile').attr('href','profile.html')
-                  }
-              }
+                        // $("#log_btn").hide();
+                        $('.log_btn').html('Profile').attr('href', 'profile.html')
+                    }
+                }
             });
-      }
+        }
     </script>
 
 </body>
